--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ noticeboard.db.database=0
 noticeboard.db.username=
 noticeboard.db.password=
 
-noticeboard.url=
+noticeboard.url=https://publishing-production-d35a.up.railway.app/
